--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,13 @@
  @theme {
   --color-purpla: #7C3AED ;
    --color-light : #7C3AED33 ;
-   --color-black : #1E1E1E ;
+   --color-black : #000000 ;
    --color-white : #FFFFFF ;
  }
  h1,h2,h3,h4,h5,h6{
     font-family: "Poppins", sans-serif;
  }
- p{
+ p, a, li, strong{
   font-family: "Mulish", sans-serif
  }
  *{
@@ -22,6 +22,9 @@
  }
  body{
   overflow-x: hidden;
+ }
+ nav ul li a:active{
+  color: #7C3AED !important;
  }
  .discount1{
    background:url("./assets/discount1.svg");
